Intro - fixed animation and btns alignment issues

--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -151,11 +151,15 @@
     width: 100%;
     background-color: var(--blue);
     height: 100vh;
-    padding-bottom: 100px;
+}
+.title-container {
+    width: 100%;
+    background-color: var(--blue);
+    height: clamp(calc(100vh - 60px), calc(100vh - 7vh), calc(100vh - 10px));
     display: flex;
     flex-direction: column;
-    justify-content: center;
- }
+    justify-content: space-evenly;
+}
 
 .title {
     position: relative;
@@ -176,7 +180,6 @@
 }
 .title-pos {
     text-align: center;
-    top: 10%;
 }
 
 .subtitle {
@@ -198,7 +201,7 @@
 }
 .subtitle-pos {
     text-align: center;
-    top: 8.5%;
+    top: -15px;
 }
 
 .name {
@@ -209,14 +212,14 @@
     font-size: clamp(0rem, calc(-1.5rem + 4vw + 3vh), 4rem);
 }
 
-
 .btns {
+    position: relative;
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 9vh;
-    margin-top: calc(25vh + -4.2vw);
+    top: -15px;
 }
 .btnAnimating {
     font-size: calc(-1rem + 1.5vw + 5vh);
